add quality video material
